fix: Align and format column stats (new PR) (#723)
* Allign and format column stats


* Update common version and other minor changes


* Update mock data include chart_name


* fix lint

--- a/frontend/amundsen_application/static/js/components/ColumnList/ColumnStats/styles.scss
+++ b/frontend/amundsen_application/static/js/components/ColumnList/ColumnStats/styles.scss
@@ -44,7 +44,9 @@
 
         .stat-value {
           flex: 100px 1 1;
-          padding-right: 4px;
+          padding-right: $spacer-half;
+          text-align: right;
+          font-style: $font-family-monospace-code;
         }
       }
     }
